Fixed dark mode issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,13 +56,3 @@ a {
   height: 466px;
   transform: translate(-15%, 60%);
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
